--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Frontend Mentor | Recipe Page</title>
 
     <!-- CSS FILES -->
-    <link rel="stylesheet" href="../assets/styles/index.css"> <!-- MOBILE FIRST -->
-    <link rel="stylesheet" href="../assets/styles/large-screen.css" media="screen and (min-width: 600px)">
+    <link rel="stylesheet" href="assets/styles/index.css"> <!-- MOBILE FIRST -->
+    <link rel="stylesheet" href="assets/styles/large-screen.css" media="screen and (min-width: 600px)">
 
     <!-- ICON GITHUB -->
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/>
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="../assets/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
